--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 /* 
     Document   : style.css
     Created on : 2013/01/21, 16:04:46
+    Updated on : 2013/12/23, 15:06
     Author     : tai
     Description:
-        Purpose of the stylesheet follows.
+        The stylesheet for the plugin.
 */
 
 #wpadminbar .show-template-name,
