--- a/style-old.css
+++ b/style-old.css
@@ -9,24 +9,25 @@
 
 #wpadminbar .show-template-name,
 #wpadminbar .hover .show-template-name,
-#wpadminbar .quicklinks .menupop ul li#wp-admin-bar-included_files_path .ab-item div {
+#wpadminbar #wp-admin-bar-included_files_path .ab-item div {
 	font-family: monospace;
 	text-shadow: none;
 }
 
-#wpadminbar .quicklinks .menupop ul li#wp-admin-bar-included_files_path .ab-item {
+#wpadminbar #wp-admin-bar-included_files_path .ab-item {
 	height: auto;
 }
 
-#wpadminbar .quicklinks .menupop ul li#wp-admin-bar-included_files_path .ab-item div {
-	color: #fff;
+#wpadminbar .show-template-name {
+    color: #ccc;
 }
 
-#wpadminbar .hover .show-template-name:hover,
-#wpadminbar .quicklinks .menupop ul li#wp-admin-bar-included_files_path .ab-item #included-files-list li:hover {
-	color: #2ea2cc;
+#wpadminbar #included-files-list li,
+#wpadminbar .menupop.hover .show-template-name {
+	color: #333;
 }
 
-#included-files-list {
+#wpadminbar #included-files-list li {
 	margin-left: 20px;
+    text-shadow: none;
 }
