--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 /* 
     Document   : style.css
     Created on : 2013/01/21, 16:04:46
-    Updated on : 2015/11/29, 9:45
+    Updated on : 2016/10/17, 18:42
     Author     : tai
     Description:
     The stylesheet for the plugin.
@@ -39,4 +39,9 @@
   #included-files-list {
     margin-left: 20px;
   }
+}
+
+#wp-admin-bar-show_template_file_name_on_top-default {
+    max-height: 90vh;
+    overflow-x: hidden;
 }
