--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,51 +1,58 @@
 /* 
     Document   : style.css
     Created on : 2013/01/21, 16:04:46
-    Updated on : 2020/04/26, 12:30
+    Updated on : 2020/04/26, 13:55
     Author     : tai
     Description:
     The stylesheet for the plugin.
 */
 
 #wpadminbar {
-  .show-template-name, .hover .show-template-name {
-    font-family: monospace;
-    text-shadow: none;
-  }
+	.show-template-name, .hover .show-template-name {
+		font-family: monospace;
+		text-shadow: none;
+	}
 
-  #wp-admin-bar-included_files_path .ab-item {
-    div {
-      font-family: monospace;
-      text-shadow: none;
-      color: #fff;
-    }
+	#wp-admin-bar-included_files_path .ab-item {
+		div {
+			font-family: monospace;
+			text-shadow: none;
+			color: #fff;
+		}
 
-    height: auto;
-    padding-bottom: 1rem;
-  }
+		height: auto;
+		padding-bottom: 1rem;
+	}
 
-  .hover .show-template-name:hover {
-    color: #2ea2cc;
-  }
+	.hover .show-template-name:hover {
+		color: #2ea2cc;
+	}
 
-  #wp-admin-bar-included_files_path .ab-item #included-files-list li {
-    &:hover {
-      color: #2ea2cc;
-    }
+	#wp-admin-bar-included_files_path .ab-item #included-files-list li {
+		&:hover {
+			color: #2ea2cc;
+		}
 
-    line-height: 1.5;
-  }
+		line-height: 1.5;
+	}
 
-  #included-files-list {
-    margin-left: 20px;
-  }
+	#included-files-list {
+		margin-left: 20px;
+	}
 }
 
 #wp-admin-bar-show_template_file_name_on_top-default {
     max-height: 90vh;
     overflow-x: hidden;
 }
-	
+
 .custom-header-media {
 	display: none;
+}
+
+.on-hover-pop {
+	position: absolute;
+	z-index: 100000;
+	background-color: orange;
+	padding: 10px;
 }
