--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,18 @@
   display: inline;
   padding: 0;
   text-decoration: underline;
+  line-height: 1rem;
+}
+#wpadminbar .quicklinks #wp-admin-bar-show_template_file_name_on_top .ab-item {
+  height: auto;
+  white-space: normal;
+}
+#wpadminbar .quicklinks #wp-admin-bar-show_template_file_name_on_top .ab-sub-wrapper {
+  width: 300px;
 }
 #wpadminbar .quicklinks p {
   line-height: 1rem;
+  margin-bottom: 1rem;
 }
 #wpadminbar .show-template-name,
 #wpadminbar .hover .show-template-name {
